# syncdir

./: Cargo.toml  build.rs
.github/workflows/: check.yml  release.yml
src/: cli.rs  config.rs  cp.rs  lib.rs  main.rs  service.rs  sync.rs  util.rs
tests/: common.rs  sync_tests.rs
