[package]
name = "syncdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
dialoguer = "0.10.4"
env_logger = "0.10.0"
filetime = "0.2.22"
globset = "0.4.13"
itertools = "0.11.0"
log = "0.4.20"
# mlua = { version = "0.9.0", features = ["luajit52", "vendored"] }
rayon = "1.7.0"
sha2 = "0.10.7"
walkdir = "2.3.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user", "fs"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dev-dependencies]
ctor = "0.2.4"
fake = "2.8.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tempfile = "3.8.0"
uuid = { version = "1.4.1", features = ["v4"] }
