[package]
name = "syncdir"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "string"] }
derive_builder = "0.12"
dialoguer = "0.11"
directories = "5.0"
log = "0.4"
env_logger = "0.10"
filetime = "0.2"
getset = "0.1"
itertools = "0.11"
sha2 = "0.10"
walkdir = "2"
os_display = "0.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
globset = "0.4"
faccess = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "fs"] }
xattr = "1.0"


[profile.release]
strip = true # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dev-dependencies]
ctor = "0.2"
fake = "2.9"
once_cell = "1.18"
pretty_assertions = "1.4"
rstest = "0.18"
tempfile = "3.8"
uuid = { version = "1.5", features = ["v4"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "rustc", "gitoxide"] }
